<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="loading_data">Loading weather data</string>
    <string name="apiKey">8bf5f13c04d3d73882b65c708828ebf9</string>
    <string name="msg_err_parsing_json">Error while parsing json data</string>
    <string name="msg_too_many_requests">Too many requests ocoured</string>
    <string name="msg_connection_problem">Bad response from server</string>
    <string name="msg_connection_not_available">Internet connection error</string>
    <string name="dialog_cancel">No</string>
    <string name="location_settings">GPS Not Enabled</string>
    <string name="location_settings_message">Do you wants to turn On GPS?</string>
    <string name="location_settings_button">Yes</string>
    <string name="sunset">Sunset</string>
    <string name="Sunrise">Sunrise</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="temp_max">Temp. Max</string>
    <string name="temp_min">Temp. Min</string>
    <string name="next_4_days_forecast">Next 4 Days Forecast</string>
    <string name="today_forecast">Today Forecast</string>
    <string name="dialog_no_internet">No Internet</string>
    <string name="dialog_no_inter_message">You have no active internet connection.</string>
    <string name="dialog_enable_gps">Enable GPS</string>
    <string name="dialog_enable_3g">Enable 3G</string>
    <string name="dialog_enable_wifi">Enable WIFI</string>
    <string name="dialog_exit">Exit</string>
</resources>
